<resources>

    <string name="app_name">GeoReporter</string>
    <string name="menu_report">Report</string>
    <string name="menu_archive">My Reports</string>
    <string name="menu_about">About</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_personal_info">Personal Info</string>
    <string name="title_activity_main">GeoReporter</string>
    <string name="tab_servers">Servers</string>
    <string name="button_add_server">Add Server</string>
    <string name="button_accept_error">Dismiss</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="url">Url</string>
    <string name="jurisdiction_id">Jurisdiction ID</string>
    <string name="api_key">Api Key</string>
    <string name="format">Format</string>
    <string name="supports_media">Supports Media</string>
    <string name="dialog_loading_services">Loading service information</string>
    <string name="dialog_posting_service">Posting service request</string>
    <string name="choose_media_source">Choose source of picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="location">Location</string>
    <string name="report_status">Status</string>
    <string name="report_attributes">Attributes</string>
    <string name="report_description">Description of problem</string>
    <string name="report_date">Reported Date</string>
    <string name="description">Description</string>
    <string name="report_attach_image">Attach Image</string>
    <string name="answer_here">Answer Here</string>
    <string name="answer_number_here">Enter Number Here</string>
    <string name="map_removeaddr">Reset Address</string>
    <string name="map_addaddr">Set Address</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="ok">Ok</string>
    <string name="pending">Pending</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="retry">Retry</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="radio_button_normal">Standard</string>
    <string name="radio_button_hybrid">Hybrid</string>
    <string name="radio_button_satellite">Satellite</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="reports_near">Reports Near You</string>

    <string-array name="navigation_list">
        <item>SELECT SERVER</item>
        <item>ADD SERVER</item>
        <item>ACTIONS</item>
        <item>HOME</item>
        <item>PERSONAL INFO</item>
        <item>MY REPORTS</item>
        <item>ABOUT</item>
    </string-array>
        <string name="attach_media">Attach</string>
        <string name="set_loc">Set Location</string>
        <string name="post_anon">Would you like to post this issue anonomously?</string>
        <string name="crosshair">Crosshair</string>
        <string name="endpoint">Endpoint</string>
        <string name="uploaded_image">Uploaded Image</string>

</resources>