<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/abs__background_holo_light"
    android:orientation="vertical"
    android:padding="@dimen/layout_margin" >

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_small"
        android:ems="10"
        android:hint="@string/url"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/jurisdiction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_small"
        android:ems="10"
        android:hint="@string/jurisdiction_id"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/api_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_small"
        android:ems="10"
        android:hint="@string/api_key" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/format"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_colour_report_heading" />

        <Spinner
            android:id="@+id/format"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supports_media"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_colour_report_heading" />

        <ToggleButton
            android:id="@+id/supports_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin"
            android:textOff="@string/no"
            android:textOn="@string/yes" />
    </LinearLayout>

</LinearLayout>